<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgPrimary"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <!--    TODO add a logo-->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AccountMenuTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_login"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:navigationIconTint="?attr/colorPrimary"
            tools:layout_height="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/account_login_melon"
            android:textColor="@color/TextPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/account_prompt_email_phone_or_username"
            android:textColor="@color/TextSecondary" />

        <EditText
            android:id="@+id/login_credential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:autofillHints="emailAddress"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:selectAllOnFocus="true"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/account_prompt_password"
            android:textColor="@color/TextSecondary" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:autofillHints="password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/account_prompt_forgot_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <include layout="@layout/common_ui_divider" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginVertical="@dimen/spacing_small"
            android:background="@drawable/round_rect"
            android:enabled="false"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_small"
            android:text="@string/account_action_sign_in"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bgSecondary"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_small"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/spacing_micro"
            android:text="@string/account_prompt_logging_in"
            android:textColor="@color/TextPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>