<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AccountMenuTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:navigationIconTint="?attr/colorPrimary"
            tools:layout_height="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/account_prompt_create_account"
            android:textColor="@color/TextPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="136dp" />

        <TextView
            android:id="@+id/sign_up_review_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:textSize="20sp" />

        <include
            layout="@layout/common_ui_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_xlarge" />

        <TextView
            android:id="@+id/sign_up_review_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:textSize="20sp" />

        <include
            layout="@layout/common_ui_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_xlarge" />

        <TextView
            android:id="@+id/sign_up_review_phone_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:textSize="20sp" />

        <include
            layout="@layout/common_ui_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_xlarge" />

        <TextView
            android:id="@+id/sign_up_review_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:textSize="20sp" />

        <include
            layout="@layout/common_ui_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_xlarge" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:lineHeight="20sp"
            android:text="@string/account_prompt_sign_up_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:background="@drawable/round_rect"
            android:gravity="center"
            android:paddingVertical="@dimen/spacing_small"
            android:text="@string/account_action_sign_up"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/review_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50FFFFFF"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</FrameLayout>